<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Login"
    android:background="@color/grey"
    android:orientation="vertical">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >

    <TextView
        android:id="@+id/textView_welcomeLogIn"
        android:fontFamily="cursive"
        android:text="@string/welcomeSignUp"
        style="text"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="35sp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        />

    <EditText
        android:id="@+id/editText_Name"
        android:autofillHints=""
        android:backgroundTint="@color/orange"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="LabelFor"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"/>


    <EditText
        android:id="@+id/editText_Email"
        android:autofillHints=""
        android:backgroundTint="@color/orange"
        android:ems="10"
        android:inputType="text"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:hint="@string/Email"
        tools:ignore="LabelFor"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/editText_Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="@color/orange"
            android:ems="10"
            android:inputType="number|phone"
            android:hint="@string/Phone"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="LabelFor"
            android:layout_marginBottom="20dp"/>
        <EditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="@color/orange"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/Password"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="LabelFor"
            android:layout_marginBottom="20dp"
            />

        <RadioGroup
            android:id="@+id/rd1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="teacher"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:buttonTint="@color/white"/>
        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="student"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_marginLeft="20dp"
            android:buttonTint="@color/white"/>
        </RadioGroup>

        <Button
        android:id="@+id/button_LogIn"
        android:text="@string/SwitchToLogin"
        android:textColor="@color/grey"
        android:textSize="20sp"
        android:backgroundTint="@color/orange"
        android:onClick="checkuser"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
      />
    </LinearLayout>




</RelativeLayout>